--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Prject1</title>
 </head>
 <body>
-    
+    <h1 style="font-family: Arial, Helvetica, sans-serif;">Project 1: A Rube Goldberg machine</h1>
+    <p style="text-align:center;"><img src="Diagram.png" width="1700px" alt="diagram"/>
+
 </body>
 </html>
