--- a/Project1/indexTCM.html
+++ b/Project1/indexTCM.html
@@ -3,12 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarot Reading</title>
+    <title>Combined Project</title>
 </head>
 
 <body>
+    <!-- Project 1: A Rube Goldberg machine -->
+    <h1 style="font-family: Arial, Helvetica, sans-serif;">Project 1: A Rube Goldberg machine</h1>
+    <p style="text-align:center;"><img src="Diagram.png" width="1700px" alt="diagram"/></p>
+
+    <!-- Tarot Reading Application -->
     <button role="button" id="initTrigger">START!</button>
     <section id="tarotSection"></section>
     <section id="colorSection"></section>
