--- a/Project1/index.html
+++ b/Project1/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1 style="font-family: Arial, Helvetica, sans-serif;">Project 1: A Rube Goldberg machine</h1>
-    <p style="text-align:center;"><img src="Diagram.png" width="1700px" alt="diagram" /></p>
+    <p style="text-align:center;"><img src="Diagram2.png" width="1700px" alt="diagram" /></p>
 
     <h1 style="font-family: Arial, Helvetica, sans-serif;">Tarot Reading</h1>
     <button role="button" id="initTrigger">Flip the Card</button>
