--- a/Project1/documentation/index.html
+++ b/Project1/documentation/index.html
@@ -348,11 +348,19 @@
   <p class="project-1-a-rube-goldberg-machine-r91">Project 1: A Rube Goldberg machine</p>
   <p class="intro-MLf">Intro</p>
   <p class="github-link-fcF">Github Link</p>
-  <p class="horoscope-today-ycw">Horoscope Today</p>
+  <p class="horoscope-today-ycw">
+    <a href="https://lukazhuang.github.io/CretiveTect4/Project1/" target="_blank">
+        Horoscope Today
+    </a>
+  </p>
   <div class="line-1-6Sf">
   </div>
   <div class="line-2-Rzj">
   </div>
-  <p class="https-githubcom-lukazhuang-cretivetect4-tree-main-project1-aMq">https://github.com/lukazhuang/CretiveTect4/tree/main/Project1</p>
+  <p class="https-githubcom-lukazhuang-cretivetect4-tree-main-project1-aMq">
+    <a href="https://github.com/lukazhuang/CretiveTect4/tree/main/Project1" target="_blank">
+    https://github.com/lukazhuang/CretiveTect4/tree/main/Project1
+  </a>
+  </p>
 </div>
 </body>
