--- a/Project1/index.html
+++ b/Project1/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <button role="button" id="initTrigger">START!</button>
+    <button role="button" id="initTrigger">Filp a Card</button>
     <section id="tarotSection"></section>
     <section id="colorSection"></section>
     <section id="jokeSection"></section>
