--- a/Project2/index.html
+++ b/Project2/index.html
@@ -974,7 +974,7 @@
                 <br>
             </span>
             <span class="c8">
-                <a class="c17" href="https://www.google.com/url?q=https://youtu.be/WBPVPDDIFcc&amp;sa=D&amp;source=editors&amp;ust=1709877252468772&amp;usg=AOvVaw1lCAUZE1r1EVHfF-BlIgri">https://youtu.be/WBPVPDDIFcc</a>
+                <a class="c17" href="https://youtube.com/shorts/UeP8uhwNsgo">https://youtube.com/shorts/UeP8uhwNsgo</a>
             </span>
         </p>
     </body>
